--- a/force-app/main/default/classes/Carro.cls
+++ b/force-app/main/default/classes/Carro.cls
@@ -13,7 +13,8 @@ public with sharing class Carro {
 
     }
 public static Boolean ligarFarois(Boolean ligarFarois){
-    Boolean ligouFarois = ligouFarois ? true : false;
+    Boolean igouFarois = ligouFarois ? true : false;
+    
 
 }
 
