--- a/force-app/main/default/classes/Carro.cls
+++ b/force-app/main/default/classes/Carro.cls
@@ -1,21 +1,46 @@
 public with sharing class Carro {
-    public Carro() {
-        
-        public static Boolean ligarCarro{Boolean ligarcarro}{
-            Boolean carroLigado = ligarCarro ? true : false;
-            
-            if(ligarCarro == true){
-                System.debug('ligou o carro');
-            } else {
-                system.debug('desligou o carro');
-            }
+
+    //atributos do carro
+    public String modelo {get; set;}
+    public String cor {get; set;}
+    public Boolean ligado {get; set;}
+    public Integer velocidadeCarro {get; set;}
+    public Boolean estadoPorta {get; set;} //false é porta fechada
+
+    //DESAFIO - No Carro criar um metodo chamado Acelerar, passar nesse metodo o numero da velocidade. retornar a mesma velocidade.
+    //No motorista vocês devem mandar para o carro o valor da velocidade, porém só pode acelerar se o carro estiver ligado.
+    public Boolean acelerar(Integer velocidade){
+        return velocidade > 0 && velocidade != null && this.ligado == true ? true : false;
+    }
+  
+    /*public Boolean ligarCarro(Boolean ligarCarro){
+        Boolean carroLigado = ligarCarro ? true : false;
+        if(ligarCarro == true){
+            system.debug('ligou o carro');
+        }else{
+            system.debug('desligou o carro');
         }
-
-    }a
-public static Boolean ligarFarois(Boolean ligarFarois){
-    Boolean igouFarois = ligouFarois ? true : false;
+        return carroLigado;
+    }
     
+    public Boolean ligarFarois(Boolean ligarFarois){
+        Boolean ligouFarol = ligarFarois ? true : false;
+        if(ligarFarois){
+            system.debug('Ligou os farois');
+        }else{
+            system.debug('Desligou os farois');
+        }
+        return ligouFarol;
+    }
 
-}
+    public Boolean ligarSeta(Boolean ligarSeta){
+        Boolean ligouSeta = ligarSeta ? true : false;
+        if(ligarSeta){
+            system.debug('Ligou os Seta');
+        }else{
+            system.debug('Desligou os Seta');
+        }
+        return ligouSeta;
+    }*/    
 
 }
